# StereoVision-YOLO-Fuzzy

./: .gitignore  main.py  pyproject.toml
Scripts/: Camera_Calibration.py
docs/: Camera_Calibration.md  boundary_box_smoothing.md  uv_package manager.md
notebooks/: Monocular_depth_estimation_MiDas.ipynb  Train_YOLO_Models.ipynb
src/: __init__.py  comparison_demo.py  config.py  fuzzy_bbox_smoother.py  hand_detector.py  live_hand_detection.py
tests/: Duel_Camera.py  object_detection_duel_Cam.py
